--- a/src/smartcalc/mainwindow.ui
+++ b/src/smartcalc/mainwindow.ui
@@ -375,6 +375,9 @@ QPushButton:pressed {
     <property name="text">
      <string>=</string>
     </property>
+    <property name="shortcut">
+     <string>Return</string>
+    </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
